[package]
name = "swappy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
sled = "0.34.7"
bdk = {version = "0.27.0", features = ["sqlite", "keys-bip39"]}
boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust" }
lightning-invoice = "0.28.0"